ajusterment des balises méta

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="L'île de la Sottise est une île de relaxation par excellence. ">
+    <meta name="description" content="Travail TP 2">
     <meta name="keywords"
-          content="Île, Sottise, relaxation, massages, spa, plein air, écologie, littoral, grosse île">
+          content="tp2">
     <meta name="michel kingma-lord" content="Michel Kingma-Lord">
 
-    <title>Domaine de l'île de la Sottise</title>
+    <title>Travail TP2</title>
     <link rel="shortcut icon" type="image/png" href="./medias/favicon/monfavicon-32x32.png">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 
