Séparer en colonnes les articles, application de background et menu de navigation

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <img src="images/logo-final.png" alt="Accueil (logo à la manière de)">
                 </a>
                 <ul class="nav__list nav__list--sublist">
-                    <li class="nav__listItem"><a class="nav__link--active" href=""></a></li>
-                    <li class="nav__listItem"><a class="nav__link" href=""></a></li>
-                    <li class="nav__listItem"><a class="nav__link" href=""></a></li>
-                    <li class="nav__listItem"><a class="nav__link" href=""></a></li>
+                    <li class="nav__listItem"><a class="nav__link--active" href="">Artistes</a></li>
+                    <li class="nav__listItem"><a class="nav__link" href="">Blogue</a></li>
+                    <li class="nav__listItem"><a class="nav__link" href="">Ressources</a></li>
+                    <li class="nav__listItem"><a class="nav__link" href="">À propos</a></li>
                 </ul>
             </nav>
 
@@ -43,8 +43,7 @@
                 <h2 class="sous-titre">Les photomanipulations originales</h2>
                 <p>Jean-Charles Debroize est directeur de création chez Kerozen à Rennes, en France. Découvert grâce à
                     son projet de typographie « humaine » qui avait connu un grand succès en 2013, Jean-Charles Debroize
-                    excelle en photomanipulation en imaginant des créations saisissantes de réalisme.<br />
-
+                    excelle en photomanipulation en imaginant des créations saisissantes de réalisme.
                     Ses travaux réalisés pour la suite Adobe Creative Cloud connaissent un succès retentissant. La
                     poésie des images et leur qualité artistique sait mettre en valeur le potentiel créatif des produits
                     Adobe, mais plus que tout, fait valoir l'immense talent de cet artiste!</p>
@@ -80,7 +79,7 @@
                 </article>
 
                 <article class="description">
-                    <h2>une inspiration pour les novices</h2>
+                    <h2>Une inspiration pour les novices</h2>
                     <figure><img src="images/3-ours_600.jpg" alt="Jeune fille chevauchant un ours">
                         <figcaption>Jeune fille chevauchant un ours <br>© Debroize, 2017</figcaption>
                     </figure>
@@ -149,8 +148,8 @@
                 </ol>
             </section>
 
-            <p class="copyright"><small>Tous droits réservés, &copy; Projet en Intégration <time>2022</time> - Graignon
-                    Maxime</small></p>
+            <p class="copyright"><small>Tous droits réservés, &copy; Projet en Intégration <time>2022</time> - Kingma-Lord
+                    Michel</small></p>
 
         </footer>
 
